cmake_minimum_required(VERSION 3.14)


# set(CMAKE_CXX_COMPILER "/usr/bin/g++")

project(keccak_test)

set(CMAKE_CXX_STANDARD 11)

include(FetchContent)

FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)

set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()


add_executable(
    keccak_test
    keccak_test.cpp    
)

target_include_directories(keccak_test PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)


target_link_libraries(
    keccak_test
    gtest_main
)

include(GoogleTest)
gtest_discover_tests(keccak_test)